# robotic_arm

./: .gitignore  CMakeLists.txt  README.md
doc/model/: 底座-Body.stl  底座-ST3215-Body.stl  底座-ST3215.20260317-223753.FCBak  底座-ST3215.FCStd  底座.20260317-135622.FCBak  底座.FCStd  未命名1-Body.stl  未命名2-Body.stl  臂展内连接件-Body.stl  臂展内连接件.FCStd  臂展外连接件-Body.stl  臂展外连接件.FCStd  臂展连接件-Body.stl  臂展连接件.FCStd  舵机-电源连接板-Body.stl  舵机-电源连接板.20260318-134617.FCBak  舵机-电源连接板.20260404-182945.FCBak  舵机-电源连接板.FCStd
src/: main.cpp
src/arm_controller/: CMakeLists.txt  arm_controller_plugins.xml  package.xml
src/arm_controller/include/arm_controller/: arm_controller.hpp
src/arm_controller/src/: arm_controller.cpp
src/arm_description/: CMakeLists.txt  package.xml
src/arm_description/config/: arm_controllers.yaml  arm_controllers_real.yaml  arm_controllers_sim.yaml  display_settings.rviz
src/arm_description/launch/: arm_description_ignition.launch.py  arm_description_mock.launch.py  arm_description_real.launch.py  arm_description_sim.launch.py
src/arm_description/urdf/: arm_description.xacro  common_inertia..xacro  ros2_control.xacro
src/arm_moveit/: CMakeLists.txt  package.xml
src/arm_moveit/config/: arm.srdf  display_settings.rviz  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  planning_scene_monitor_parameters.yaml  trajectory_execution.yaml
src/arm_moveit/launch/: arm_moveit_mock.launch.py  arm_moveit_real.launch.py  arm_moveit_sim.launch.py  moveit_launch_common.py
src/main_window/: main_window.cpp  main_window.ui
src/servo_driver/: SCS.h  SMS_STS.cpp
src/servo_hardware/: CMakeLists.txt  export.xml  package.xml  servo_hardware_plugins.xml
src/servo_hardware/include/servo_hardware/: servo_hardware.h
src/servo_hardware/src/: servo_hardware.cpp
src/servo_hardware/urdf/: servo_hardware.xacro
src/servo_manager/: CMakeLists.txt  package.xml  servo_manager.cpp  servo_manager.h
src/servo_manager/include/common/: singleton.h
src/servo_manager/include/servo_manager/: servo_manager.h
src/servo_manager/servo_driver/: SCS.cpp  SCS.h  SMS_STS.cpp  SMS_STS.h
src/servo_manager/src/: servo_manager.cpp
src/servo_widget/: CMakeLists.txt  package.xml  servo_widget.cpp  servo_widget.h  servo_widget.ui
src/servo_widget/src/: main.cpp
src/servo_widget/src/arm_widget/: arm_widget.cpp  arm_widget.h  arm_widget.ui
src/servo_widget/src/main_window/: main_window.cpp  main_window.h
src/servo_widget/src/servo_widget/: servo_widget.cpp  servo_widget.h  servo_widget.ui
