<?xml version="1.0"?>
<package format="3">
    <name>arm_controller</name>
    <version>0.1.0</version>
    <description>Custom ros2_control controller plugin for direct servo command handling.</description>
    <maintainer email="dev@todo.todo">dev</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>controller_interface</depend>
    <depend>pluginlib</depend>
    <depend>rclcpp</depend>
    <depend>rclcpp_action</depend>
    <depend>sensor_msgs</depend>
    <depend>trajectory_msgs</depend>
    <depend>control_msgs</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
        <controller_interface plugin="${prefix}/arm_controller_plugins.xml" />
    </export>
</package>