<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>arm_moveit</name>
    <version>0.1.0</version>
    <description>MoveIt2 configuration package for the 6-axis robotic arm.</description>
    <maintainer email="dev@todo.todo">dev</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>arm_description</exec_depend>
    <exec_depend>launch</exec_depend>
    <exec_depend>launch_ros</exec_depend>
    <exec_depend>moveit_configs_utils</exec_depend>
    <exec_depend>moveit_ros_move_group</exec_depend>
    <exec_depend>moveit_ros_visualization</exec_depend>
    <exec_depend>moveit_simple_controller_manager</exec_depend>
    <exec_depend>rviz2</exec_depend>
    <exec_depend>xacro</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>